Correction Div, Flex-wrap et Activité Marseille

--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,7 @@ h1 {
 
 .hebergements-card {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 
 }
@@ -428,7 +429,7 @@ h1 {
 }
 
 .marseille-cards .card-title {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
     line-height: 19px;
     text-align: left;
@@ -451,7 +452,7 @@ footer {
 
 }
 
-nav {
+footer nav {
     width: 33%;
     margin-left: 20px;
 }
@@ -522,9 +523,7 @@ ul {
         font-size: 13px;
     }
 
-    .marseille-cards a {
-        width: 194px;
-    }
+
 
     .marseille-cards .card {
         height: 270px;
@@ -715,7 +714,7 @@ ul {
         box-sizing: border-box;
     }
 
-    nav {
+    footer nav {
         margin-left: 30px;
         width: 90%;
 
